--- a/index.html
+++ b/index.html
@@ -5,45 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
 
 <div id="container">
-    <div class="bg-black screen">
-        <div id="calcul1"></div>
-        <div id="result1"></div>
-        <div id="calcul2"></div>
-        <div id="result2"></div>
+    <div class="row justify-content-center">
+        <div class="screen border border-dark col-8">
+            <div id="calcul"></div>
+            <div class="text-end" id="result1"></div>
+            <div id="calcul2"></div>
+            <div class="text-end" id="result3"></div>
+        </div>
     </div>
     <div>
         <div class="row">
-            <button class="col-3 border border-white shadow fw-bold btn btn-secondary">7</button>
-            <button class="col-3 border border-white shadow fw-bold btn btn-secondary">8</button>
-            <button class="col-3 border border-white shadow fw-bold btn btn-secondary">9</button>
-            <button class="col-3 border border-white shadow fw-bold btn btn-warning">%</button>
+            <button id="btn7" onclick="getNumber(7)" class="col-3 border border-white shadow fw-bold btn btn-secondary">7</button>
+            <button id="btn8" onclick="getNumber(8)" class="col-3 border border-white shadow fw-bold btn btn-secondary">8</button>
+            <button id="btn9" onclick="getNumber(9)" class="col-3 border border-white shadow fw-bold btn btn-secondary">9</button>
+            <button id="btn%" onclick="" class="col-3 border border-white shadow fw-bold btn btn-warning">%</button>
         </div>
         <div class="row">
-            <button class="col-3 border border-white shadow fw-bold btn btn-secondary">4</button>
-            <button class="col-3 border border-white shadow fw-bold btn btn-secondary">5</button>
-            <button class="col-3 border border-white shadow fw-bold btn btn-secondary">6</button>
-            <button class="col-3 border border-white shadow fw-bold btn btn-warning">x</button>
+            <button id="btn4" onclick="getNumber(4)" class="col-3 border border-white shadow fw-bold btn btn-secondary">4</button>
+            <button id="btn5" onclick="getNumber(5)" class="col-3 border border-white shadow fw-bold btn btn-secondary">5</button>
+            <button id="btn6" onclick="getNumber(6)" class="col-3 border border-white shadow fw-bold btn btn-secondary">6</button>
+            <button id="btnx" onclick="" class="col-3 border border-white shadow fw-bold btn btn-warning">x</button>
         </div>
         <div class="row">
-            <button class="col-3 border border-white shadow fw-bold btn btn-secondary">1</button>
-            <button class="col-3 border border-white shadow fw-bold btn btn-secondary">2</button>
-            <button class="col-3 border border-white shadow fw-bold btn btn-secondary">3</button>
-            <button class="col-3 border border-white shadow fw-bold btn btn-warning">-</button>
+            <button id="btn1" onclick="getNumber(1)" class="col-3 border border-white shadow fw-bold btn btn-secondary">1</button>
+            <button id="btn2" onclick="getNumber(2)" class="col-3 border border-white shadow fw-bold btn btn-secondary">2</button>
+            <button id="btn3" onclick="getNumber(7)" class="col-3 border border-white shadow fw-bold btn btn-secondary">3</button>
+            <button id="btn-" onclick="" class="col-3 border border-white shadow fw-bold btn btn-warning">-</button>
         </div>
         <div class="row">
-            <button class="col-3 border border-white shadow fw-bold btn btn-secondary">0</button>
-            <button class="col-3 border border-white shadow fw-bold btn btn-secondary">.</button>
-            <button class="col-3 border border-white shadow fw-bold btn btn-danger">=</button>
-            <button class="col-3 border border-white shadow fw-bold btn btn-warning">+</button>
+            <button id="btn0" onclick="getNumber(0)" class="col-3 border border-white shadow fw-bold btn btn-secondary">0</button>
+            <button id="btn." onclick="" class="col-3 border border-white shadow fw-bold btn btn-secondary">.</button>
+            <button id="btn=" onclick="" class="col-3 border border-white shadow fw-bold btn btn-danger">=</button>
+            <button id="btn+" onclick="" class="col-3 border border-white shadow fw-bold btn btn-warning">+</button>
         </div>
         <div class="row">
-            <button class="col border border-white shadow fw-bold btn btn-outline-danger">CE</button>
+            <button id="btnCE" class="col border border-white shadow fw-bold btn btn-outline-danger">CE</button>
         </div>
     </div>
 </div>
