--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <div id="container">
     <div class="row justify-content-center">
         <div class="screen border border-dark col-8">
-            <div id="calcul"></div>
-            <div class="text-end" id="result1"></div>
-            <div id="result2"></div>
-            <div class="text-end" id="result3"></div>
+            <div id="nb1"></div>
+            <div class="text-end" id="calcul"></div>
+            <div id="nb2"></div>
+            <div class="text-end" id="result"></div>
         </div>
     </div>
     <div>
