--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <button id="btn+" onclick="getAddOperator('+')" class="col-3 border border-white shadow fw-bold btn btn-warning">+</button>
         </div>
         <div class="row">
-            <button id="btnCE" class="col border border-white shadow fw-bold btn btn-outline-danger">CE</button>
+            <button id="btnCE" onclick="reset()" class="col border border-white shadow fw-bold btn btn-outline-danger">CE</button>
         </div>
     </div>
 </div>
