--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <div class="row">
             <button id="btn1" onclick="getNumber(1)" class="col-3 border border-white shadow fw-bold btn btn-secondary">1</button>
             <button id="btn2" onclick="getNumber(2)" class="col-3 border border-white shadow fw-bold btn btn-secondary">2</button>
-            <button id="btn3" onclick="getNumber(7)" class="col-3 border border-white shadow fw-bold btn btn-secondary">3</button>
+            <button id="btn3" onclick="getNumber(3)" class="col-3 border border-white shadow fw-bold btn btn-secondary">3</button>
             <button id="btn-" onclick="getAddOperator('-')" class="col-3 border border-white shadow fw-bold btn btn-warning">-</button>
         </div>
         <div class="row">
             <button id="btn0" onclick="getNumber(0)" class="col-3 border border-white shadow fw-bold btn btn-secondary">0</button>
-            <button id="btn." onclick="" class="col-3 border border-white shadow fw-bold btn btn-secondary">.</button>
-            <button id="btn=" onclick="" class="col-3 border border-white shadow fw-bold btn btn-danger">=</button>
+            <button id="btn." onclick="getNumber('.')" class="col-3 border border-white shadow fw-bold btn btn-secondary">.</button>
+            <button id="btn=" onclick="equals()" class="col-3 border border-white shadow fw-bold btn btn-danger">=</button>
             <button id="btn+" onclick="getAddOperator('+')" class="col-3 border border-white shadow fw-bold btn btn-warning">+</button>
         </div>
         <div class="row">
